cf_analysis_results/checkerframework_results/url400631cdd0_ludaiqian_appliedxml_tgz-pJ8-test_simples_TestJ8.txt
../../../../datasets/june2020_dataset/url400631cdd0_ludaiqian_appliedxml_tgz-pJ8-test_simples_TestJ8/src/test/fromlist/Test.java:37: error: (required.method.not.called) $$ 4 $$ method close $$ in $$ java.io.InputStream $$ regular method exit $$ ( 1120, 1180 ) $$ @MustCall method close may not have been invoked on in or any of its aliases.
		InputStream in = Test.class.getResourceAsStream("test.xml");
		            ^
  The type of object is: java.io.InputStream.
  Reason for going out of scope: regular method exit
../../../../datasets/june2020_dataset/url400631cdd0_ludaiqian_appliedxml_tgz-pJ8-test_simples_TestJ8/src/test/simples/Test.java:109: error: (required.method.not.called) $$ 4 $$ method close $$ in $$ java.io.InputStream $$ regular method exit $$ ( 2754, 2821 ) $$ @MustCall method close may not have been invoked on in or any of its aliases.
		InputStream in = Test.class.getResourceAsStream("allsubjects.xml");
		            ^
  The type of object is: java.io.InputStream.
  Reason for going out of scope: regular method exit
../../../../datasets/june2020_dataset/url400631cdd0_ludaiqian_appliedxml_tgz-pJ8-test_simples_TestJ8/src/com/google/gsoncode/internal/LinkedTreeMap.java:457: error: (return) $$ 2 $$ @MustCallUnknown String $$ @MustCall String $$ ( 12290, 12307 ) $$ incompatible types in return.
      return key + "=" + value;
                       ^
  type of expression: @MustCallUnknown String
  method return type: @MustCall String
Note: ../../../../datasets/june2020_dataset/url400631cdd0_ludaiqian_appliedxml_tgz-pJ8-test_simples_TestJ8/src/org/jczh/appliedxml/ElementConstructorManager.java uses unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
3 errors
